Design depending on definitions

--- a/test.tex
+++ b/test.tex
@@ -6,7 +6,6 @@
 
 \begin{toulmin}
 \fact{fact}
-\fact{\fact}
 \warrant{warrant}
 \backing{backing}
 \qualifier{qualifier}
@@ -14,6 +13,11 @@
 \conclusion{conclusion}
 \end{toulmin}
 
-
+\begin{toulmin}
+\fact{fact}
+\warrant{warrant}
+\backing{backing}
+\conclusion{conclusion}
+\end{toulmin}
 
 \end{document}
