--- a/argumentation.sty
+++ b/argumentation.sty
@@ -12,15 +12,8 @@
 \newlength\ArgumentCoffinWidthMiddle
 \newlength\ArgumentCoffinWidthConclusion
 
-\setlength\ArgumentCoffinWidthFact{\dimexpr(\linewidth)/4}
-\setlength\ArgumentCoffinWidthWarrant{\dimexpr(\linewidth)/4}
-\setlength\ArgumentCoffinWidthBacking{\dimexpr(\linewidth)/4}
-\setlength\ArgumentCoffinWidthQualifier{\dimexpr(\linewidth)/4}
-\setlength\ArgumentCoffinWidthRebuttal{\dimexpr(\linewidth)/4}
-\setlength\ArgumentCoffinWidthMiddle{\dimexpr(\ArgumentCoffinWidthQualifier+\ArgumentCoffinWidthWarrant)}
-\setlength\ArgumentCoffinWidthConclusion{\dimexpr(\linewidth)/4}
+\newif\ifArgumentToulminQualifierRebuttalDefined
 
-\newenvironment{toulmin}{%
 \NewCoffin\ArgumentCoffinFact
 \NewCoffin\ArgumentCoffinWarrant
 \NewCoffin\ArgumentCoffinBacking
@@ -29,6 +22,7 @@
 \NewCoffin\ArgumentCoffinMiddle
 \NewCoffin\ArgumentCoffinConclusion
 
+\newenvironment{toulmin}{%
 \def\ArgumentTextFact{}
 \def\ArgumentTextWarrant{}
 \def\ArgumentTextBacking{}
@@ -51,6 +45,27 @@
 \newcommand\ArgumentTextBox[1]{\fboxrule=0pt\fbox{\parbox{\dimexpr(\linewidth-2\fboxsep-2\fboxrule)}{##1}}}
 \newcommand\ArgumentVertRule{\centering |\par}%
 }{
+	\ifdefstring{\ArgumentTextQualifier}{}{%%
+		\ifdefstring{\ArgumentTextRebuttal}{}{\ArgumentToulminQualifierRebuttalDefinedfalse}{\ArgumentToulminQualifierRebuttalDefinedtrue}%
+	}{\ArgumentToulminQualifierRebuttalDefinedtrue}%
+
+	\ifArgumentToulminQualifierRebuttalDefined
+		\setlength\ArgumentCoffinWidthFact{\dimexpr(\linewidth)/4}
+		\setlength\ArgumentCoffinWidthWarrant{\dimexpr(\linewidth)/4}
+		\setlength\ArgumentCoffinWidthBacking{\dimexpr(\linewidth)/4}
+		\setlength\ArgumentCoffinWidthQualifier{\dimexpr(\linewidth)/4}
+		\setlength\ArgumentCoffinWidthRebuttal{\dimexpr(\linewidth)/4}
+		\setlength\ArgumentCoffinWidthMiddle{\dimexpr(\ArgumentCoffinWidthQualifier+\ArgumentCoffinWidthWarrant)}
+		\setlength\ArgumentCoffinWidthConclusion{\dimexpr(\linewidth)/4}
+	\else
+		\setlength\ArgumentCoffinWidthFact{\dimexpr(\linewidth)/3}
+		\setlength\ArgumentCoffinWidthWarrant{\dimexpr(\linewidth)/3}
+		\setlength\ArgumentCoffinWidthBacking{\dimexpr(\linewidth)/3}
+		\setlength\ArgumentCoffinWidthMiddle{\ArgumentCoffinWidthWarrant}
+		\setlength\ArgumentCoffinWidthConclusion{\dimexpr(\linewidth)/3}
+	\fi
+
+
 \SetVerticalCoffin\ArgumentCoffinFact{\ArgumentCoffinWidthFact}%
   {\ArgumentTextBox{\ArgumentTextFact}\hfill}%
 \SetVerticalCoffin\ArgumentCoffinWarrant{\ArgumentCoffinWidthWarrant}%
@@ -68,12 +83,21 @@
 	\begin{picture}(1,0)\put(0,0){\vector(1,0){1}}\end{picture}}%
 
 
-\JoinCoffins\ArgumentCoffinFact[r,vc]\ArgumentCoffinMiddle[l,vc]
-\JoinCoffins\ArgumentCoffinFact[\ArgumentCoffinMiddle-r,vc]\ArgumentCoffinConclusion[l,vc]
-\JoinCoffins\ArgumentCoffinFact[\ArgumentCoffinMiddle-l,\ArgumentCoffinMiddle-b]\ArgumentCoffinWarrant[l,t]
-\JoinCoffins\ArgumentCoffinFact[\ArgumentCoffinWarrant-b,\ArgumentCoffinWarrant-hc]\ArgumentCoffinBacking[t,hc]
-\JoinCoffins\ArgumentCoffinFact[\ArgumentCoffinWarrant-r,\ArgumentCoffinWarrant-t]\ArgumentCoffinQualifier[l,t]
-\JoinCoffins\ArgumentCoffinFact[\ArgumentCoffinQualifier-b,\ArgumentCoffinQualifier-hc]\ArgumentCoffinRebuttal[t,hc]
+	\ifArgumentToulminQualifierRebuttalDefined
+		\JoinCoffins\ArgumentCoffinFact[r,vc]\ArgumentCoffinMiddle[l,vc]
+		\JoinCoffins\ArgumentCoffinFact[\ArgumentCoffinMiddle-r,vc]\ArgumentCoffinConclusion[l,vc]
+		\JoinCoffins\ArgumentCoffinFact[\ArgumentCoffinMiddle-l,\ArgumentCoffinMiddle-b]\ArgumentCoffinWarrant[l,t]
+		\JoinCoffins\ArgumentCoffinFact[\ArgumentCoffinWarrant-b,\ArgumentCoffinWarrant-hc]\ArgumentCoffinBacking[t,hc]
+		\JoinCoffins\ArgumentCoffinFact[\ArgumentCoffinWarrant-r,\ArgumentCoffinWarrant-t]\ArgumentCoffinQualifier[l,t]
+		\JoinCoffins\ArgumentCoffinFact[\ArgumentCoffinQualifier-b,\ArgumentCoffinQualifier-hc]\ArgumentCoffinRebuttal[t,hc]
+	\else
+		\JoinCoffins\ArgumentCoffinFact[r,vc]\ArgumentCoffinMiddle[l,vc]
+		\JoinCoffins\ArgumentCoffinFact[\ArgumentCoffinMiddle-r,vc]\ArgumentCoffinConclusion[l,vc]
+		\JoinCoffins\ArgumentCoffinFact[\ArgumentCoffinMiddle-l,\ArgumentCoffinMiddle-b]\ArgumentCoffinWarrant[l,t]
+		\JoinCoffins\ArgumentCoffinFact[\ArgumentCoffinWarrant-b,\ArgumentCoffinWarrant-hc]\ArgumentCoffinBacking[t,hc]
+	\fi
+
 
 \TypesetCoffin\ArgumentCoffinFact
+
 }
